# Perplexity-Tools

./: .env.example  .gitignore  .gitmodules  .opengrep.yml  .pre-commit-config.yaml  AGENTS.md  AGENT_RESUME.md  CHANGELOG.md  CLAUDE.md  LESSONS.md  README.md  README_v0.9.0.md  SKILL.md  agent_launcher.py  alphaclaw_bootstrap.py  implementation_templates.json  install.sh  multi_agent_labs_strategy.json  orchestrator.py  pyproject.toml  requirements.txt  setup_wizard.py
.agents/skills/Perpetua-Tools/: SKILL.md
.agents/skills/Perpetua-Tools/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json  settings.json  settings.local.json
.claude/agents/: api-validator.md  codex-coder.md  gemini-analyzer.md
.claude/commands/: add-new-api-endpoint.md  ecc-sync.md  feature-development.md  integrate-new-agent-or-model.md
.claude/hooks/: pre-commit
.claude/lessons/: LESSONS.md
.claude/skills/Perpetua-Tools/: SKILL.md
.claude/skills/agent-run/: SKILL.md
.claude/skills/alphaclaw-session/: SKILL.md
.claude/skills/hardware-policy/: SKILL.md
.claude/skills/model-routing-check/: SKILL.md
.claude/skills/self-improve/: SKILL.md
.codex/: AGENTS.md
.cursor/: environment.json
.cursor/rules/: banned-attribution-local.mdc  never-undo-attribution-expunge.mdc  no-commit-attribution.mdc  zero-banned-attribution-everywhere.mdc
.githooks/: commit-msg  pre-commit  pre-push
.github/: AUTHORIZED_CONTRIBUTORS.md
.github/workflows/: ci.yml
config/: SKILL.md  devices.yml  model_hardware_policy.yml  models.yml  routing.yml
docs/: 2026-05-22-rag-backport-v1-release-notes.md  2026-05-31-tri-repo-alignment-completion-plan.md  HUMAN-IN-LOOP-ACCOUNTABILITY.md  LESSONS.md  MIGRATION.md  MODEL_HARDWARE_MATRIX.md  ORAMA_v0.9.4.0_SKILL_autoresearch_subsection.md  RC_CHECKLIST.md  ROADMAP_v1.1.md  ULTRATHINK_v0.9.4.0_SKILL_autoresearch_subsection.md  adapter-interface-contract.md  cross-platform.md  openclaw-setup.md  plan-review-migration-plan-3.md  system-design-three-repo-architecture.md
docs/adr/: ADR-001-three-repo-adapter-architecture.md
docs/plans/: 2026-05-31-gate2-implementation-plan.md  2026-05-31-track-bc-claude-desktop-mcpb.md
docs/superpowers/plans/: 2026-05-20-codex-review-remaining-fixes.md
docs/wiki/: 01-ci-deps.md  02-idempotent-installs.md  03-device-identity.md  04-gateway-discovery.md  05-autoresearcher-migration.md  06-startup-ip-detection.md  07-multi-agent-collab.md  08-macos-alphaclaw-compat.md  2026-04-20-LM-Studio-autodiscovery-PLAN.md  2026-04-20-LMStudio-autodiscovery-design.md  README.md
hardware/: Modelfile.mac-studio  Modelfile.win-rtx3080  SKILL.md  gemma-4-26b-setup.md
hardware/startup-intelligence/: SKILL.md
orchestrator/: __init__.py  agent_launcher.py  agent_tracker.py  alphaclaw_manager.py  autoresearch_bridge.py  backend_resolver.py  connectivity.py  contracts.py  control_plane.py  control_plane_auth.py  cost_guard.py  dangerous_workers.py  ecc_tools_sync.py  ecc_tools_sync_test.py  fastapi_app.py  gbrain_search.py  gossip_bus.py  key_helper.py  lan_discovery.py  memory_embed.py  memory_governance.py  memory_node.py  memory_rrf.py  memory_store.py  model_registry.py  onboarding.py  openclaw_skill_resolver.py  orama_bridge.py  perplexity_client.py  redaction.py  spawn_reconciliation.py  startup_intelligence.py  supervisor.py  ultrathink_bridge.py  ultrathink_mcp_client.py  worker_registry.py
perpetua/: __init__.py
perpetua/discovery/: __init__.py  errors.py  registry.py
scripts/: check_docs_sync.py  check_env_assignment.py  check_env_assignments.py  check_no_hallucinated_models.py  ensure_requirements.ps1  ensure_requirements.sh  fix-xcode-claude.sh  hardware_policy_cli.py  install-claude-desktop-llm.sh  install-gstack.sh  launch_researchers.py  mac_probe.sh  spawn_agents.py  sync-companion-instincts.sh  test_perplexity.py
scripts/cursor/: ci-bootstrap-private-attribution.sh  cloud-bootstrap.sh  install-user-git-environment.sh  sync-private-attribution-from-home.sh  write-cursor-private-attribution.sh
scripts/cursor/hooks/: session-apply-git-guards.sh
scripts/git/: apply-attribution-guard-all-repos.sh  audit_attribution.sh  banned_attribution_lib.sh  check_commit_message.sh  check_identity.sh  commit-clean.sh  cursor-hooks-id.sh  daily-attribution-guard.sh  disable-cursor-commit-attribution.sh  ensure_hooks_installed.sh  expunge-all-workspace-repos.sh  expunge-banned-attribution-history.sh  filter-msg-strip-banned.sh  install-local-hooks.sh  neutralize-cursor-coauthor-hook.sh  publish-clean-branch.sh  scan-tracked-banned-tokens.sh  sync-attribution-guard-scripts.sh  sync-banned-patterns-to-repo.sh  verify-git-guards.sh
scripts/git/hooks/: commit-msg.strip-coauthor
scripts/review/: repo_hygiene.py
scripts/tests/: install.test.sh
tests/: conftest.py  test_agent_launcher_uses_registry.py  test_agent_tracker.py  test_alphaclaw_manager.py  test_alphaclaw_manager_bootstrap_json.py  test_autoresearch_bridge.py  test_backend_resolver.py  test_backend_routing.py  test_contracts.py  test_control_plane.py  test_control_plane_auth.py  test_control_plane_security.py  test_cost_guard.py  test_dangerous_workers.py  test_dispatch_models.py  test_fastapi_health.py  test_fastapi_supervisor.py  test_gbrain_search.py  test_git_attribution_guard.py  test_git_hygiene_scripts.py  test_gossip_bus.py  test_hardware_routing.py  test_job_spec.py  test_lan_discovery.py  test_lmstudio_win.py  test_mcp_path_boundary.py  test_memory_node.py  test_memory_rrf.py  test_memory_store.py  test_model_endpoint_url.py  test_openclaw_skill_resolver.py  test_opengrep_config.py  test_orama_bridge.py  test_orama_http_backup.py  test_orama_integration.py  test_orama_mcp_client.py  test_perplexity_client.py  test_repo_hygiene.py  test_resilience.py  test_routing.py  (+9 more)
tests/discovery/: test_backend.py  test_probe.py  test_registry.py  test_selector.py
tests/scripts/: conftest.py  test_install_scripts.py
utils/: __init__.py  action_validator.py  audit_log.py  dispatch_models.py  hardware_policy.py  model_endpoint_url.py
(+3 files in other folders)
