# pyproject.toml — Perpetua-Tools
# Makes PT pip-installable for consistent versioning + dependency pinning
# Mirrors orama-system's pyproject.toml structure (PEP 517/518)

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perpetua-tools"
version = "0.9.9.9"
description = "Top-level idempotent multi-agent orchestrator: per-device model selection, fallback routing, cost guard, and orama-system integration."
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.11"
keywords = [
    "multi-agent", "orchestrator", "llm", "ollama", "mlx",
    "fastapi", "ultrathink", "perplexity", "ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core frameworks
    # crewai + crewai-tools removed 2026-05-29: zero imports in codebase (vestigial
    # from Perplexity-Tools era); brought in diskcache CVE-2025-69872 via instructor
    # transitive dep and blocked python-dotenv >=1.2.2 (CVE-2026-28684).
    # perplexityai removed 2026-05-29: zero imports; Perplexity is called via
    # the openai-compatible SDK (OPENAI_BASE_URL override) in perplexity_client.py.
    "openai>=1.30.0",
    # FastAPI web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    # Async and networking
    "aiohttp>=3.9.3",
    "asyncio>=3.4.3",
    "httpx>=0.26.0",
    # Database and caching
    "aiosqlite>=0.19",        # GossipBus async SQLite + FTS5 (RAG backport 2026-05-22)
    "redis>=5.0.1",
    "python-multipart>=0.0.27",
    "sqlalchemy>=2.0.25",
    # Data validation
    "pydantic>=2.6.0",
    # Config
    "PyYAML>=6.0.1",
    # Utilities
    "python-dotenv>=1.2.2",  # CVE-2026-28684 symlink overwrite fixed in 1.2.2
    "loguru>=0.7.2",
    "rich>=13.7.0",
    # Security: rate limiting (OWASP API4)
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
# mlx group removed 2026-05-29: transformers had 15 active CVEs (ReDoS, arbitrary
# code exec) and zero actual imports in the codebase. huggingface-hub went with it.
# Re-add when an MLX backend is actually implemented.
# ── Highly recommended but optional ────────────────────────────────────────────
# Install everything at once: pip install perpetua-tools[recommended]
# Or pick individually:       pip install perpetua-tools[rag,lan]
recommended = [
    "lancedb>=0.6",
    "pyarrow>=14.0",
    "netifaces>=0.11.0",
]
rag = [
    # Semantic vector store for GossipBus (RAG backport 2026-05-22).
    # Falls back to FTS5-only keyword recall if not installed.
    "lancedb>=0.6",
    "pyarrow>=14.0",
]
lan = [
    # LAN interface detection for NetworkAutoConfig (packages/net_utils/).
    # Falls back to socket-based IP detection if not installed.
    "netifaces>=0.11.0",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.26.0",   # TestClient transport
    "flake8>=7.0",
    "mypy>=1.8",
    "respx>=0.23.1",   # httpx mocking for tests/discovery/
]

[project.urls]
"Homepage" = "https://github.com/diazMelgarejo/Perpetua-Tools"
"Bug Tracker" = "https://github.com/diazMelgarejo/Perpetua-Tools/issues"
"orama-system" = "https://github.com/diazMelgarejo/orama-system"
"Changelog" = "https://github.com/diazMelgarejo/Perpetua-Tools/blob/main/CHANGELOG.md"

[project.scripts]
pt-orchestrator = "orchestrator.fastapi_app:app"
pt-setup = "setup_wizard:main"
pt-launch = "agent_launcher:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*"]
exclude = ["tests*", "vendor*", ".state*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "E221", "E272"]
exclude = [".git", "__pycache__", "vendor", ".state"]
